Fullscreen Area Button conflicts with Sidebar. #64888

Closed
opened 2019-05-20 17:26:05 +02:00 by Zino Guerr · 14 comments

System Information
Operating system: Windows-10 64 Bits
Graphics card: GeForce GTX 1050 Ti latest driver

Blender Version
Broken: version: 2.80.71 hash: 828efef151
Worked: (optional)

Short description of error
Fullscreen Area Button conflicts with Sidebar top row...this should be fixed before UI freeze, probably best to bring back those arrows in the 2.79b and put them in the bottom right corner.

Exact steps for others to reproduce the error
Toggle fullscreen area in the viewport (Ctrl+alt+space) and try to click in the top right corner in the n-panel location bar.

Max.gif

**System Information** Operating system: Windows-10 64 Bits Graphics card: GeForce GTX 1050 Ti latest driver **Blender Version** Broken: version: 2.80.71 hash: 828efef15175 Worked: (optional) **Short description of error** Fullscreen Area Button conflicts with Sidebar top row...this should be fixed before UI freeze, probably best to bring back those arrows in the 2.79b and put them in the bottom right corner. **Exact steps for others to reproduce the error** Toggle fullscreen area in the viewport (Ctrl+alt+space) and try to click in the top right corner in the n-panel location bar. ![Max.gif](https://archive.blender.org/developer/F7051819/Max.gif)
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G

Added subscriber: @jenkm

Added subscriber: @jenkm

There are two bugs, the first one is an invisible icon.

Worked: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74
Broken: version: 2.80 (sub 64), branch: blender2.7, commit date: 2019-05-13 22:40, hash: f070bdd7c9

The second bug, overlapping, is also present in version 2.79b.

Region Overlap OFF Region Overlap ON
maximized-279.png maximized-279-overlap.png
maximized-280.png maximized-280-overlap.png

And it's not a Maximized Area, it's a Fullscreen Area.

There are two bugs, the first one is an invisible icon. **Worked:** version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: `3dc9da3a74` **Broken:** version: 2.80 (sub 64), branch: blender2.7, commit date: 2019-05-13 22:40, hash: `f070bdd7c9` The second bug, overlapping, is also present in version 2.79b. | **Region Overlap OFF** | **Region Overlap ON** | | -- | -- | | ![maximized-279.png](https://archive.blender.org/developer/F7065558/maximized-279.png) | ![maximized-279-overlap.png](https://archive.blender.org/developer/F7065557/maximized-279-overlap.png) | | ![maximized-280.png](https://archive.blender.org/developer/F7065559/maximized-280.png) | ![maximized-280-overlap.png](https://archive.blender.org/developer/F7065560/maximized-280-overlap.png) | And it's not a Maximized Area, it's a **Fullscreen Area**.
Author

@jenkm, the operators are called that way "Maximized Area" which has this bug. ..i found it in the UI and the tooltip calls it both fullscreen and Maximized ;)
screen.jpg

@jenkm, the operators are called that way "Maximized Area" which has this bug. ..i found it in the UI and the tooltip calls it both fullscreen and Maximized ;) ![screen.jpg](https://archive.blender.org/developer/F7076991/screen.jpg)

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sebastian Parborg self-assigned this 2019-06-12 12:03:25 +02:00

This seems to be fixed. At least I can't seem to reproduce this with the latest build.

This seems to be fixed. At least I can't seem to reproduce this with the latest build.
Author

In #64888#699875, @ZedDB wrote:
This seems to be fixed. At least I can't seem to reproduce this with the latest build.

the overlap still happens, so not sure how it's fixed!!

> In #64888#699875, @ZedDB wrote: > This seems to be fixed. At least I can't seem to reproduce this with the latest build. the overlap still happens, so not sure how it's fixed!!

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

The you will have to provide some nice step by step guide to reproduce this.

Simply maximizing the 3D viewport and clicking in the areas pointed out above is not working for me.

The you will have to provide some nice step by step guide to reproduce this. Simply maximizing the 3D viewport and clicking in the areas pointed out above is not working for me.

@ZedDB check out my comment above, this refers to a Fullscreen Area not a Maximized Area. There is no close button in the maximized area, only in the fullscreen.

@ZedDB check out my comment above, this refers to a **Fullscreen Area** not a Maximized Area. There is no close button in the maximized area, only in the fullscreen.
Sebastian Parborg changed title from Maximized Area Button conflicts with Sidebar. to Fullscreen Area Button conflicts with Sidebar. 2019-06-13 12:43:39 +02:00
Sebastian Parborg removed their assignment 2019-06-13 12:44:18 +02:00
Campbell Barton was assigned by Sebastian Parborg 2019-06-13 12:44:18 +02:00

I also noticed that if you disable this:

{F7665509,width=50%}

it does not help, since it deactivates the button function but the button itself remains (continues to block other items).

I also noticed that if you disable this: {[F7665509](https://archive.blender.org/developer/F7665509/exit-fullscreen-area.png),width=50%} it does not help, since it deactivates the button function but the button itself remains (continues to block other items).

This issue was referenced by 48a6997e2a

This issue was referenced by 48a6997e2a0657d8b238101b84b688b37bc88875

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64888
No description provided.