Fix T64888: full-screen button overlaps side-bar